fixing navbar on ios

--- a/src/components/Navbar/Navbar3.css
+++ b/src/components/Navbar/Navbar3.css
@@ -169,5 +169,13 @@ div.selec {
 	}
 }}
 
+@supports (-webkit-overflow-scrolling: touch) {
+  @media only screen and (min-width: 812px) and (max-width:875px) and (orientation: landscape){
+	div.dropDown {
+		height:20vh;
+		margin-top:15vh;
+	}
+}
+}
 
 
